fixed navbar content overlap

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -7,6 +7,7 @@
     height: 66px;
     top: 0;
     position: sticky;
+    z-index: 500;
 }
 
 .container-fluid{
